add linked in link to challenges

--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@
                                     <div class="wp-block-themeisle-blocks-button-group wp-block-buttons align-center">
                                         <div style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScRg-VpQl4BqYotvaqP9aj8t2QNQBYIkBYyIITccNsIP2aH9w/viewform">REGISTER NOW</a></div>
                                         <div style="text-align:center">Follow our <a href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn page</a> to get updates</div>
-
-
                                     </div>
                                 </div>
 
@@ -177,13 +175,13 @@
                         <h2 class="wp-block-heading has-text-color" style="color:#004880">Challenges</h2>
 
                         <p>
-                            Check out last years challenges until the 2025 challenges are announced.
+                            Challenges will be announced soon. <a href="https://www.linkedin.com/company/zurichhack-climateaction-tech">Follow us on LinkedIn</a> to be the first to know! Meanwhile, check out last years challenges:
                         </p>
 
-                        <h3>2024 Challenge 1 "Sustainable accessible websites" <img src="./index_files/challenge-network.png"
-                                                                               title="Low-carbon Infrastructure"
-                                                                               width="40px">
+                        <h3> 
+                            <img src="./index_files/challenge-network.png" title="Low-carbon Infrastructure" width="40px">
                             <img src="./index_files/challenge-code.png" title="Green Software Engineering" width="40px">
+                            2024 Challenge 1 "Sustainable accessible websites"
                         </h3>
                         <p>
                             Make a real-life website more sustainable by applying the <a
@@ -194,8 +192,9 @@
                             of the Sustainable Web Design Community Group of the W3C.
                         </p>
 
-                        <h3>2024 Challenge 2 "IT Inventory" <img src="./index_files/challenge_factory.png"
-                                                            title="Business Culture & Behavior Change" width="40px">
+                        <h3>
+                            <img src="./index_files/challenge_factory.png" title="Business Culture & Behavior Change" width="40px">
+                            2024 Challenge 2 "IT Inventory" 
                         </h3>
                         <p>
                             Suggest strategies for a company to reduce the footprint of IT Hardware.
@@ -203,8 +202,9 @@
                             Get support from the experts at <a href="https://resilio-solutions.com/">Resilio</a>.
                         </p>
 
-                        <h3>2024 Challenge 3 "Impact Framework" <img src="./index_files/challenge-code.png"
-                                                                title="Green Software Engineering" width="40px"></h3>
+                        <h3>
+                            <img src="./index_files/challenge-code.png" title="Green Software Engineering" width="40px">
+                            2024 Challenge 3 "Impact Framework" </h3>
                         <p>
                             Improve the <a href="https://if.greensoftware.foundation/">impact framework</a> of the <a
                                 href="https://greensoftware.foundation/">Green Software Foundation</a> by developing a
@@ -212,9 +212,9 @@
                             Get support from the inventors of the framework directly.
                         </p>
 
-                        <h3>2024 Challenge 4 "Sustainable Product Design" <img src="./index_files/challenge-circle.png"
-                                                                          title="Sustainable Product Design"
-                                                                          width="40px"></h3>
+                        <h3>
+                            <img src="./index_files/challenge-circle.png" title="Sustainable Product Design" width="40px">
+                            2024 Challenge 4 "Sustainable Product Design" </h3>
                         <p>
                             Waste from Electrical and Electronic Equipment (WEEE) is a major problem in the industry.
                             What if you could redesign everything? What would you do differently?
