--- a/index.html
+++ b/index.html
@@ -172,50 +172,40 @@
                         </p>
 
                         <h3> 
-                            <img src="./index_files/challenge-network.png" title="Low-carbon Infrastructure" width="40px">
                             <img src="./index_files/challenge-code.png" title="Green Software Engineering" width="40px">
-                            2024 Challenge 1 "Sustainable accessible websites"
+                            "Greenify" your preferred open-source tool!
                         </h3>
                         <p>
-                            Make a real-life website more sustainable by applying the <a
-                                href="https://w3c.github.io/sustyweb/">Web Sustainability Guidelines</a> and the <a
-                                href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines</a>.
-                            How can you achieve the most impact in the given scenario?
-                            Get support from <a href="https://www.linkedin.com/in/mastalerzlukasz/">Łukasz Mastalerz</a>
-                            of the Sustainable Web Design Community Group of the W3C.
+                            Dive into energy efficiency, optimize resource use, and make a real impact on digital sustainability. Which tool will you pick?
                         </p>
 
                         <h3>
                             <img src="./index_files/challenge_factory.png" title="Business Culture & Behavior Change" width="40px">
-                            2024 Challenge 2 "IT Inventory" 
+                            Develop a quick-start guide for Green IT in your team!
                         </h3>
                         <p>
-                            Suggest strategies for a company to reduce the footprint of IT Hardware.
-                            Validate your suggestion running a simulation with real-life inventory data.
-                            Get support from the experts at <a href="https://resilio-solutions.com/">Resilio</a>.
+                            Not a coder? No problem. Help bridge the knowledge gap by creating an easy-to-follow playbook to make sustainable tech practices a no-brainer.
+                        </p>
+
+                        <h3> 
+                            <img src="./index_files/challenge-code.png" title="Green Software Engineering" width="40px">
+                            Improve existing Green-IT tool
+                        </h3>
+                        <p>
+                        </p>
+
+                        <h3>
+                            <img src="./index_files/challenge_factory.png" title="Business Culture & Behavior Change" width="40px">
+                            Pitch to management for emission reduction programme
+                        </h3>
+                        <p>
                         </p>
 
                         <h3>
                             <img src="./index_files/challenge-code.png" title="Green Software Engineering" width="40px">
-                            2024 Challenge 3 "Impact Framework" </h3>
+                            Develop a sustainability checklist for IT projects
+                        </h3>
                         <p>
-                            Improve the <a href="https://if.greensoftware.foundation/">impact framework</a> of the <a
-                                href="https://greensoftware.foundation/">Green Software Foundation</a> by developing a
-                            new or extending an existing plugin.
-                            Get support from the inventors of the framework directly.
-                        </p>
-
-                        <h3>
-                            <img src="./index_files/challenge-circle.png" title="Sustainable Product Design" width="40px">
-                            2024 Challenge 4 "Sustainable Product Design" </h3>
-                        <p>
-                            Waste from Electrical and Electronic Equipment (WEEE) is a major problem in the industry.
-                            What if you could redesign everything? What would you do differently?
-                            Use principles of circular design (i.e.
-                            <a href="https://www.ellenmacarthurfoundation.org/circular-design-guide/">Ellen McArthur
-                                Circular Design Guide</a>,
-                            <a href="https://publications.vtt.fi/julkaisut/muut/2022/Data-driven_circular_design.pdf">Data-driven
-                                circular design</a>) to address this problem with support from our team.
                         </p>
 
                         <h2 class="wp-block-heading has-text-color" style="color:#004880">Impressions from 2024</h2>
