add sponsor resilio

--- a/index.html
+++ b/index.html
@@ -375,23 +375,22 @@
                                             </div>
                                             <div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow">
                                                 <div class="wp-block-image">
-                                                    <!--
-                                                    <figure class="aligncenter size-full is-resized"><a
-                                                            href="https://www.zuehlke.com"><img decoding="async"
+                                                    <figure class="alignleft size-full is-resized"><a
+                                                            href="https://resilio-solutions.com/"><img decoding="async"
                                                                 loading="lazy" width="200"
-                                                                src="./index_files/sponsor_zuehlke.png"
-                                                                alt="Forbes logo" class="wp-image-4369 lazyloaded"
-                                                                style="width:200px" data-ll-status="loaded">
+                                                                src="./index_files/sponsor_resilio.png"
+                                                                alt="Resilio logo" class="wp-image-4365 lazyloaded"
+                                                                style="width:198px" data-ll-status="loaded">
                                                             <noscript><img decoding="async" loading="lazy" width="200"
-                                                                    src="./index_files/sponsor_zuehlke.png"
-                                                                    alt="Forbes logo" class="wp-image-4369"
-                                                                    style="width:200px" /></noscript>
+                                                                    src="https://resilio-solutions.com/"
+                                                                    alt="Resilio logo" class="wp-image-4365"
+                                                                    style="width:198px" /></noscript>
                                                         </a>
                                                         <figcaption class="wp-element-caption"><a
-                                                                href="https://www.zuehlke.com">Zühlke Engineering</a>
+                                                                href="https://resilio-solutions.com/">Resilio
+                                                                Solutions</a>
                                                         </figcaption>
                                                     </figure>
-                                                -->
                                                 </div>
                                             </div>
                                         </div>
