--- a/index.html
+++ b/index.html
@@ -405,6 +405,31 @@
                                 </div>
                             </div>
                             <hr class="wp-block-separator has-css-opacity is-style-wide">
+                            <h2 class="wp-block-heading pt-0">Terms & Conditions</h2>
+                            <p>
+                                The following terms apply to participation in this hackathon ("Hackathon").
+                                Entrants may create original solutions, prototypes, datasets, scripts, or
+                                other content, materials, discoveries or inventions (a “Submission”). The
+                                Hackathon is organized by the Hackathon Organizer.
+                            </p>
+                            <p>
+                                Entrants retain ownership of all intellectual and industrial property rights
+                                (including moral rights) in and to Submissions.
+                            </p>
+                            <p>
+                                As a condition of submission, Entrant grants the Hackathon Organizer, its
+                                subsidiaries, agents and partner companies, a perpetual, irrevocable,
+                                worldwide, royalty-free, and non-exclusive license to use, reproduce, adapt,
+                                modify, publish, distribute, publicly perform, create a derivative work
+                                from, and publicly display the Submission.
+                            </p>
+                            <p>
+                                Entrants provide Submissions on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+                                CONDITIONS OF ANY KIND, either express or implied, including, without
+                                limitation, any warranties or conditions of TITLE, NON-INFRINGEMENT,
+                                MERCHANTABILITY, or FITNESS FOR A PARTICULAR PURPOSE.
+                            </p>
+                            <hr class="wp-block-separator has-css-opacity is-style-wide">
                             <h2 class="wp-block-heading pt-0">Organizers & Contact</h2>
                             <div id="wp-block-themeisle-blocks-advanced-columns-7424f2aa2"
                                 class="wp-block-themeisle-blocks-advanced-columns has-2-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset">
@@ -426,6 +451,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
