--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                                             <div style="text-align:center">Follow our <a
                                                     href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn
                                                     page</a> to get updates</div>
+                                            <div style="text-align:center">Check out our <a
+                                                    href="https://climateaction.dribdat.cc/event/1">challenge
+                                                    plattform</a> </div>
                                         </div>
                                     </div>
 
@@ -191,9 +194,8 @@
                             <h2 class="wp-block-heading has-text-color" style="color:#004880">Challenges</h2>
 
                             <p>
-                                Challenges will be announced soon. <a
-                                    href="https://www.linkedin.com/company/zurichhack-climateaction-tech">Follow us on
-                                    LinkedIn</a> to be the first to know! Meanwhile, check out last years challenges:
+                                Check out our <a href="https://climateaction.dribdat.cc/event/1">challenge plattform</a>
+                                with more information about the challenges.
                             </p>
 
                             <h3>
@@ -201,25 +203,18 @@
                                     width="40px">
                                 "Greenify" your preferred open-source tool!
                             </h3>
-                            <p>
-                                Dive into energy efficiency, optimize resource use, and make a real impact on digital
-                                sustainability. Which tool will you pick?
-                            </p>
 
                             <h3>
                                 <img src="./index_files/challenge_factory.png"
                                     title="Business Culture & Behavior Change" width="40px">
-                                Develop a quick-start guide for Green IT in your team!
+                                Develop a quick-start-guide for Green IT in your office/team/company
+
                             </h3>
-                            <p>
-                                Not a coder? No problem. Help bridge the knowledge gap by creating an easy-to-follow
-                                playbook to make sustainable tech practices a no-brainer.
-                            </p>
 
                             <h3>
                                 <img src="./index_files/challenge-code.png" title="Green Software Engineering"
                                     width="40px">
-                                Improve existing Green-IT tool
+                                Choose an existing Green-IT tool and make it better!
                             </h3>
                             <p>
                             </p>
@@ -227,7 +222,7 @@
                             <h3>
                                 <img src="./index_files/challenge_factory.png"
                                     title="Business Culture & Behavior Change" width="40px">
-                                Pitch to management for emission reduction programme
+                                Pitch to your management an emission reduction programme for IT
                             </h3>
                             <p>
                             </p>
