--- a/index.html
+++ b/index.html
@@ -106,9 +106,13 @@
 
                                         <div
                                             class="wp-block-themeisle-blocks-button-group wp-block-buttons align-center">
-                                            <div style="text-align:center"><a
+                                            <div style="text-align:center">Registration closed
+                                                <!--
+                                                <a
                                                     href="https://docs.google.com/forms/d/e/1FAIpQLScRg-VpQl4BqYotvaqP9aj8t2QNQBYIkBYyIITccNsIP2aH9w/viewform">REGISTER
-                                                    NOW</a></div>
+                                                    NOW</a>
+                                            -->
+                                            </div>
                                             <div style="text-align:center">Follow our <a
                                                     href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn
                                                     page</a> to get updates</div>
@@ -214,7 +218,7 @@
                             <h3>
                                 <img src="./index_files/challenge-code.png" title="Green Software Engineering"
                                     width="40px">
-                                Choose an existing Green-IT tool and make it better!
+                                Improve an existing Green-IT tool!
                             </h3>
                             <p>
                             </p>
